--- a/EasyReantalCarSystem_FrontEnd/pages/carDetails.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/carDetails.html
@@ -20,21 +20,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Vehicles</a>
-                    </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button class="btn btn-outline-light">Sign In</button>
+                    <a href="../pages/loginPage.html"><button class="btn btn-outline-light" type="button">Sign In</button></a>
                 </form>
             </div>
         </div>
@@ -44,7 +32,7 @@
     <div class="container mt-4">
         <div class="row g-3">
             <div class="col-md-3">
-                <div class="card shadow" style="width: 18rem;">
+                <div class="card shadow border-0" style="width: 18rem;">
                     <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
                     <div class="card-body">
                         <h5 class="card-title">Suzuki Celerio</h5>
@@ -57,27 +45,40 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow" style="width: 18rem;">
-                    <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/perodua%20axia.jpg" class="card-img-top" alt="#">
                     <div class="card-body">
-                        <h5 class="card-title">Suzuki Celerio</h5>
+                        <h5 class="card-title">Perodua Axia</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Daily Rate Rs: 3300</li>
-                        <li class="list-group-item">Monthly Rate Rs: 77220</li>
+                        <li class="list-group-item">Daily Rate Rs: 3800</li>
+                        <li class="list-group-item">Monthly Rate Rs: 90200</li>
                         <li class="list-group-item">Transmission Type: Auto</li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow" style="width: 18rem;">
-                    <img src="../assets/images/car_detail_images/ANE_140219975_AR_-1_0.jpg" class="card-img-top" alt="#">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/trd-and-modellista-enhancements-for-the-toyota-aqua-prius-c_100375068_l.jpg" class="card-img-top" alt="#">
                     <div class="card-body">
-                        <h5 class="card-title">Suzuki Celerio</h5>
+                        <h5 class="card-title">Toyota Prius C/Aqua</h5>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Daily Rate Rs: 3300</li>
-                        <li class="list-group-item">Monthly Rate Rs: 77220</li>
+                        <li class="list-group-item">Daily Rate Rs: 5000</li>
+                        <li class="list-group-item">Monthly Rate Rs: 110330</li>
+                        <li class="list-group-item">Transmission Type: Auto</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card shadow border-0" style="width: 18rem;">
+                    <img src="../assets/images/car_detail_images/Alto_K10-blue.png" class="card-img-top" alt="#">
+                    <div class="card-body">
+                        <h5 class="card-title">Suzuki Alto K-10</h5>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Daily Rate Rs: 3000</li>
+                        <li class="list-group-item">Monthly Rate Rs: 71390</li>
                         <li class="list-group-item">Transmission Type: Auto</li>
                     </ul>
                 </div>
