--- a/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDriverManage.html
@@ -39,7 +39,7 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <a href="../index.html"><button class="btn btn-outline-light">Log Out</button></a>
+                    <a href="../index.html"><button type="button" class="btn btn-outline-light">Log Out</button></a>
                 </form>
             </div>
         </div>
