--- a/EasyReantalCarSystem_FrontEnd/pages/loginPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/loginPage.html
@@ -17,23 +17,11 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Vehicles</a>
+                        <a class="nav-link text-white" href="../index.html">Home</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button class="btn btn-outline-light">Register</button>
+                    <a href="../pages/registerPage.html"><button type="button" class="btn btn-outline-light">Register</button></a>
                 </form>
             </div>
         </div>
