--- a/EasyReantalCarSystem_FrontEnd/pages/registerPage.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/registerPage.html
@@ -35,26 +35,32 @@
             <div class="col-md-6">
                 <label for="inputCusId" class="form-label">Customer ID</label>
                 <input type="text" class="form-control" id="inputCusId" name="customerId">
+                <p><small class="text-danger" id="txtCusId"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="inputCusName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="inputCusName" name="name">
+                <p><small class="text-danger" id="txtCusName"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="inputCusEmail" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputCusEmail" name="email">
+                <p><small class="text-danger" id="txtEmail"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="inputPassword" class="form-label">Password</label>
                 <input type="password" class="form-control" id="inputPassword" name="password">
+                <p><small class="text-danger" id="txtPassword"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="cusTelNo" class="form-label">Contact No</label>
                 <input type="text" class="form-control" id="cusTelNo" name="contactNo">
+                <p><small class="text-danger" id="txtContact"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="cusAddress" class="form-label">Address</label>
                 <input type="text" class="form-control" id="cusAddress" name="address">
+                <p><small class="text-danger" id="txtAddress"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="nicImage" class="form-label">National Identity Card Image</label>
@@ -63,6 +69,7 @@
             <div class="col-md-6">
                 <label for="cusNicNo" class="form-label">National Identity Card Number(NIC)</label>
                 <input type="text" class="form-control" id="cusNicNo" name="nicNo">
+                <p><small class="text-danger" id="txtNicNo"></small></p>
             </div>
             <div class="col-md-6">
                 <label for="licenseImage" class="form-label">License Image</label>
@@ -71,6 +78,7 @@
             <div class="col-md-6">
                 <label for="cusLicenseNo" class="form-label">License Number</label>
                 <input type="text" class="form-control" id="cusLicenseNo" name="drivingLicenseNo">
+                <p><small class="text-danger" id="txtLicenseNo"></small></p>
             </div>
         </form>
         <div class="col-auto mt-3">
@@ -149,6 +157,104 @@
             }
         });
     });
+
+/*    function generateId() {
+        $.ajax({
+            url: baseUrl + "customer/lastId/CusId",
+            type: "get",
+            success: function(lastId) {
+                var count = 0;
+                if (lastId) {
+                    count = parseInt(lastId.substr(2)) || 0;
+                }
+
+                // Increment the count and generate the next ID
+                count++;
+                var id = "C-" + count.toString().padStart(3, '0');
+
+                // Set the value of the ID field
+                $('#inputCusId').val(id);
+            }
+        });
+    }*/
+
+    /************ Validation ************/
+
+    const cusIdRegEx = /^C-\d{3}$/;
+    const cusNICRegEx = /^[0-9/A-z]{10,15}$/;
+    const cusLicenseRegEx = /^[0-9/A-z]{10,15}$/;
+    const cusNameRegEx = /^[A-z ]{2,20}$/;
+    const cusAddressRegEx = /^[0-9/A-z. ,]{7,}$/;
+    const cusContactRegEx = /^[0-9]{3}[-]?[0-9]{7}$/;
+    const cusEmailRegEx=/^[a-z0-9]{3,}[@]?[a-z]{1,}[.]?[a-z]{2,}$/;
+    const cusPasswordRegEx=/^[A-z0-9]{6,}$/;
+
+    function customerValidation() {
+        var id = $("#inputCusId").val();
+        $("#inputCusId").css('border', '2px solid green');
+        $("#txtCusId").text("");
+        if(cusIdRegEx.test(id)){
+            let cusName = $("#inputCusName").val();
+            if (cusNameRegEx.test(cusName)){
+                $("#inputCusName").css('border', '2px solid green');
+                $("#txtCusName").text("");
+                let cusEmail = $("#inputCusEmail").val();
+                if (cusEmailRegEx.test(cusEmail)){
+                    $("#inputCusEmail").css('border', '2px solid green');
+                    $("#txtEmail").text("");
+                    let cusPwd = $("#inputPassword").val();
+                    if (cusPasswordRegEx.test(cusPwd)){
+                        $("#inputPassword").css('border', '2px solid green');
+                        $("#txtPassword").text("");
+                        let cusContactNo = $("#cusTelNo").val();
+                        if (cusContactRegEx.test(cusContactNo)){
+                            $("#cusTelNo").css('border', '2px solid green');
+                            $("#txtContact").text("");
+                            let cusAddress = $("#cusAddress").val();
+                            if (cusAddressRegEx.test(cusAddress)){
+                                $("#cusAddress").css('border', '2px solid green');
+                                $("#txtAddress").text("");
+                                let cusNicNo = $("#cusNicNo").val();
+                                if (cusNICRegEx.test(cusNicNo)){
+                                    $("#cusNicNo").css('border', '2px solid green');
+                                    $("#txtNicNo").text("");
+                                    let cusLNo = $("#cusLicenseNo").val();
+                                    if (cusLicenseRegEx.test(cusLNo)){
+                                        $("#cusLicenseNo").css('border', '2px solid green');
+                                        $("#txtLicenseNo").text("");
+                                    } else {
+                                        $("#cusLicenseNo").css('border', '2px solid red');
+                                        $("#txtLicenseNo").text("Invalid Please Enter Again Eg : 200318304209");
+                                    }
+                                } else {
+                                    $("#cusNicNo").css('border', '2px solid red');
+                                    $("#txtNicNo").text("Invalid Please Enter Again Eg : 19640820220V");
+                                }
+                            } else {
+                                $("#cusAddress").css('border', '2px solid red');
+                                $("#txtAddress").text("Invalid Please Enter Again Eg : 225/D Panadura");
+                            }
+                        } else {
+                            $("#cusTelNo").css('border', '2px solid red');
+                            $("#txtContact").text("Invalid Please Enter Again Eg : 071896321");
+                        }
+                    } else {
+                        $("#inputPassword").css('border', '2px solid red');
+                        $("#txtPassword").text("Minimum should be more than 6 characters Eg :abc1234");
+                    }
+                } else {
+                    $("#inputCusEmail").css('border', '2px solid red');
+                    $("#txtEmail").text("Invalid Please Enter Again Eg : customer@gmail.com");
+                }
+            } else {
+                $("#inputCusName").css('border', '2px solid red');
+                $("#txtCusName").text("Invalid Please Enter Again Eg : Sajith Madusankha");
+            }
+        } else {
+            $("#inputCusId").css('border', '2px solid red');
+            $("#txtCusId").text("Invalid Please Enter Again Eg : C-006");
+        }
+    }
 </script>
 </body>
 </html>
