--- a/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
+++ b/EasyReantalCarSystem_FrontEnd/pages/adminDashBoard.html
@@ -130,5 +130,26 @@
 </main>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
+<script>
+    let baseUrl = "http://localhost:8080/EasyCarRentalSystem_BackEnd_war_exploded/api/v1/";
+
+    loadAllCustomers();
+
+    function loadAllCustomers() {
+        $("#tblCus").empty();
+        $.ajax({
+            url: baseUrl + "customer",
+            dataType: "json",
+            success: function (res) {
+                for (let cus of res.data) {
+                    var row = '<tr><td>' + cus.customerId + '</td><td>' + cus.name + '</td><td>' + cus.email +
+                        '</td><td>' + cus.password + '</td><td>' + cus.contactNo + '</td><td>' + cus.address +
+                        '</td><td>' + cus.nicNo + '</td><td>' + cus.drivingLicenseNo + '</td></tr>'
+                    $("#tblCus").append(row)
+                }
+            }
+        });
+    }
+</script>
 </body>
 </html>
